# pdas-experiments

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cases/jcam-25/: README.md
cases/jcam-25/2d_burgers/: case_def.yaml
cases/jcam-25/2d_euler/: case_def.yaml
cases/jcam-25/2d_swe/: case_def.yaml
cases/jcam-25/figures/: defaults.py  plot_compare_hyper_vs_hyper_decomp.py  plot_error_hyper_decomp.py  plot_error_hyper_decomp_space.py  plot_error_hyper_space.py  plot_error_rom_decomp.py  plot_fom.py  plot_iters_vs_overlap.py  plot_pareto.py  plot_projection_error_decomp.py
include/pdas-exp/: decomp.hpp  mono_fom.hpp  mono_lspg.hpp  observer.hpp  parser.hpp
python/: campaign_runner.py
python/pdas_exp/: defaults.py  gen_bases.py  gen_ic.py  gen_runs.py  utils.py
src/: runner.cc
